overflow bug fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -252,3 +252,7 @@
     font-weight: 600;
     margin: 20px 0;
 }
+
+body {
+    overflow-x: hidden;
+  }
